<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_sale"
            android:icon="@drawable/ic_new_sale"
            android:title="@string/menu_new_sale" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_fiados"
            android:icon="@drawable/ic_fiados"
            android:title="@string/menu_fiados" />
        <item
            android:id="@+id/nav_historic"
            android:icon="@drawable/ic_historic"
            android:title="@string/menu_historic" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/ic_logout" />
    </group>

</menu>